--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://myapp:myapp@postgresql:5432/myapp?schema=public"
+DATABASE_URL="postgresql://myapp:myapp@postgres:5432/myapp?schema=public"
